2004-08-22  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc: Various compilation fixes.
	
	* Kconfig: Centralize generic/common Kconfig information.

	* arch/ppc/hal/fpu.S: Add FPU save/restore support.

2004-08-19  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc, include/nucleus/asm-ppc: Add PowerPC base.

	* include/nucleus/asm-i386/system.h: MODULE_LICENSE is always
	defined in 2.6: remove default definition.

2004-08-17  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/hal.h: Kill obsolete
	rthal_switch_to_*() routines: system.h does this in an integrated
	fashion already.

	* include/nucleus/asm-i386/fpu.h: Kill fpu.h and integrate the
	tiny useful bit it used to provide directly into system.h.

2004-08-16  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Allow for assembly files in target modules.

2004-08-05  Marc Kleine-Budde <kleine-budde@gmx.de>

	* arch/i386/hal/hal.c (rthal_trap_fault): Remove legacy code from
	pre-Adeos times.

2004-08-05  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h: Include missing
	<rtai_config.h>.

2004-08-05  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_welcome_thread): Fix FPU ownership on
	thread entry.

2004-08-04  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.4

2004-08-04  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_next_shot): Anticipate the next timer
	shot better.

2004-08-04  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/system.h: Fix FPU support for
	kernel-based threads.

2004-08-03  Marc Kleine-Budde <kleine-budde@gmx.de>

	* nucleus/pod.c (xnpod_trap_fault): Ensure that faults over IRQs
	and threads are properly relayed to the user-defined fault
	handler.

	* nucleus/pod.c (xnpod_announce_tick): Move the test for the timer
	mode away from the inner loop.

2004-08-03  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.7-i386-r6c6. This is